# python-libdiscid

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  README.rst  cdiscid.pxd  changelog  discid-wrapper.c  discid-wrapper.h  discid.pyx  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yaml  publish-twine.yaml
docs/: api.rst  changelog.rst  conf.py  index.rst  installation.rst  license.rst  misc.rst  usage.rst
docs/source/: api.compat.rst  api.rst  changelog.rst  conf.py  index.rst  installation.rst  license.rst  misc.rst  usage.rst
libdiscid/: __init__.py  _discid.pyi  _discid.pyx  cdiscid.pxd  discid-wrapper.c  discid-wrapper.h  discid.py  discid.pyx  exceptions.py
libdiscid/compat/: discid.py
libdiscid/tests/: common.py  test_compat_discid.py  test_libdiscid.py
