[build-system]
requires = [
  "setuptools >= 43",
  "Cython (>= 0.15)",
  "pkgconfig",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
target_version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | build
  | dist
)/
'''
