[metadata]
name = python-libdiscid
version = 1.2
author = Sebastian Ramacher
author_email = sebastian@ramacher.at
url = https://github.com/sebastinas/python-libdiscid
description = Python bindings for libdiscid
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping
    Topic :: Software Development :: Libraries :: Python Modules

[options]
pytion_requires = >=3.6

[build_sphinx]
source-dir = docs
build-dir = build
all_files = 1

[upload_docs]
upload-dir = build/html
